--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,10 +32,12 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.Portugol-Utils.jar}
+    ${reference.Portugol-Utils.jar}:\
+    ${reference.Portugol-Nucleo.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.7
@@ -61,7 +63,9 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.Portugol-Nucleo=../Portugol-Nucleo
 project.Portugol-Utils=../Portugol-Utils
+reference.Portugol-Nucleo.jar=${project.Portugol-Nucleo}/dist/portugol-nucleo.jar
 reference.Portugol-Utils.jar=${project.Portugol-Utils}/dist/portugol-utils.jar
 run.classpath=\
     ${javac.classpath}:\
